--- a/css/libremedia.css
+++ b/css/libremedia.css
@@ -53,6 +53,7 @@ body {
   font-size: 2em;
   color: rgb(var(--theme-text));
   bottom: 0;
+  backdrop-filter: blur(3px) brightness(75%) saturate(150%);
 }
 
 #results {
@@ -117,20 +118,16 @@ td {
   height: 200px;
   line-height: 1.2em;
   width: auto;
-  backdrop-filter: blur(2px) brightness(95%) saturate(150%);
+  backdrop-filter: blur(2px) brightness(75%) saturate(150%);
 }
 #lyricplayed {
   color: rgba(var(--theme-accent));
 }
 #lyricblank {
   cursor: pointer;
-  border: 0;
-  border-style: none none none none;
-  font-size: 2.7em;
-  font-weight: bolder;
-  padding: 0px !important;
   height: 85vh;
   width: 100%;
+  backdrop-filter: blur(0px) brightness(100%) saturate(100%);
 }
 
 #infobar {
@@ -193,7 +190,10 @@ td {
   margin-top: 10px;
   font-size: 2em;
   /* background-color: rgba(var(--theme-background-overlay)); */
-  backdrop-filter: blur(3px) brightness(75%) saturate(150%);
+  backdrop-filter: blur(5px) brightness(20%) saturate(150%);
+  border-collapse: separate;
+  border-spacing: 5px;
+  border-radius: 20px;
 }
 
 #stream a {
